--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1060,7 +1060,7 @@ a {
   }
 }
 .cid-sglyaWFR7C {
-  padding-top: 6rem;
+  padding-top: 10rem;
   padding-bottom: 1rem;
   background-image: url("../../../assets/images/bg1-3.png");
 }
@@ -4412,6 +4412,27 @@ a {
 .cid-sgjiVKTmAL .media-container-row .mbr-text {
   color: #000000;
 }
+.cid-sgk40MdGSP {
+  padding-top: 4rem;
+  padding-bottom: 0rem;
+  background-color: #22a5e5;
+}
+.cid-sgk40MdGSP .mbr-section-title {
+  color: #ffffff;
+}
+.cid-sgk40MdGSP .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-sglxhwtvO2 {
+  padding-top: 4rem;
+  padding-bottom: 3rem;
+  background-color: #ffffff;
+}
+.cid-sglxhwtvO2 blockquote {
+  border-color: #22a5e5;
+  border-radius: 4px;
+  background-color: #fafafa;
+}
 .cid-sgk40LCT9w {
   z-index: 1000;
   width: 100%;
@@ -4764,144 +4785,15 @@ a {
     left: -1rem;
   }
 }
-.cid-sgk40MdGSP {
-  padding-top: 4rem;
-  padding-bottom: 0rem;
-  background-color: #22a5e5;
-}
-.cid-sgk40MdGSP .mbr-section-title {
-  color: #ffffff;
-}
-.cid-sgk40MdGSP .mbr-section-subtitle {
-  color: #ffffff;
-}
 .cid-sglwDipn7X {
-  padding-top: 1rem;
-  padding-bottom: 0rem;
+  padding-top: 5rem;
+  padding-bottom: 4rem;
   background-color: #ffffff;
 }
 .cid-sglwDipn7X blockquote {
   border-color: #22a5e5;
   border-radius: 4px;
   background-color: #fafafa;
-}
-.cid-sglxhwtvO2 {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-sglxhwtvO2 blockquote {
-  border-color: #22a5e5;
-  border-radius: 4px;
-  background-color: #fafafa;
-}
-.cid-sgvBLFo4XX {
-  padding-top: 2rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-sgvBLFo4XX .card .card-header {
-  background-color: transparent;
-  margin-bottom: 0;
-}
-.cid-sgvBLFo4XX .panel-title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.cid-sgvBLFo4XX .mbr-iconfont {
-  padding-left: 1rem;
-  font-family: 'Moririse2' !important;
-  font-size: 1.4rem !important;
-  color: #22a5e5;
-}
-.cid-sgvBLFo4XX .panel-body,
-.cid-sgvBLFo4XX .card-header {
-  padding: 1rem 0;
-}
-.cid-sgvBLFo4XX .panel-title-edit {
-  color: #fa5454;
-}
-.cid-sgvGGa57SF {
-  padding-top: 2rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-sgvGGa57SF .card .card-header {
-  background-color: transparent;
-  margin-bottom: 0;
-}
-.cid-sgvGGa57SF .panel-title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.cid-sgvGGa57SF .mbr-iconfont {
-  padding-left: 1rem;
-  font-family: 'Moririse2' !important;
-  font-size: 1.4rem !important;
-  color: #22a5e5;
-}
-.cid-sgvGGa57SF .panel-body,
-.cid-sgvGGa57SF .card-header {
-  padding: 1rem 0;
-}
-.cid-sgvGGa57SF .panel-title-edit {
-  color: #fa5454;
-}
-.cid-sgvHnpdCys {
-  padding-top: 2rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-sgvHnpdCys .card .card-header {
-  background-color: transparent;
-  margin-bottom: 0;
-}
-.cid-sgvHnpdCys .panel-title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.cid-sgvHnpdCys .mbr-iconfont {
-  padding-left: 1rem;
-  font-family: 'Moririse2' !important;
-  font-size: 1.4rem !important;
-  color: #22a5e5;
-}
-.cid-sgvHnpdCys .panel-body,
-.cid-sgvHnpdCys .card-header {
-  padding: 1rem 0;
-}
-.cid-sgvHnpdCys .panel-title-edit {
-  color: #fa5454;
-}
-.cid-sgvIpqHI7s {
-  padding-top: 2rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-sgvIpqHI7s .card .card-header {
-  background-color: transparent;
-  margin-bottom: 0;
-}
-.cid-sgvIpqHI7s .panel-title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.cid-sgvIpqHI7s .mbr-iconfont {
-  padding-left: 1rem;
-  font-family: 'Moririse2' !important;
-  font-size: 1.4rem !important;
-  color: #22a5e5;
-}
-.cid-sgvIpqHI7s .panel-body,
-.cid-sgvIpqHI7s .card-header {
-  padding: 1rem 0;
-}
-.cid-sgvIpqHI7s .panel-title-edit {
-  color: #fa5454;
 }
 .cid-sgk40MQF8A {
   padding-top: 30px;
@@ -8896,5 +8788,484 @@ a {
   background-color: #ffffff;
 }
 .cid-slZPZKA8f0 .media-container-row .mbr-text {
+  color: #000000;
+}
+.cid-sQemNfxrBN {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
+}
+.cid-sQemNfxrBN nav.navbar {
+  position: fixed;
+}
+.cid-sQemNfxrBN .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-sQemNfxrBN .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-sQemNfxrBN .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-sQemNfxrBN .dropdown-item:hover,
+.cid-sQemNfxrBN .dropdown-item:focus {
+  background: #22a5e5 !important;
+  color: white !important;
+}
+.cid-sQemNfxrBN .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-sQemNfxrBN .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-sQemNfxrBN .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-sQemNfxrBN .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-sQemNfxrBN .nav-link {
+  position: relative;
+}
+.cid-sQemNfxrBN .container {
+  display: flex;
+  margin: auto;
+}
+.cid-sQemNfxrBN .iconfont-wrapper {
+  color: #000000 !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-sQemNfxrBN .dropdown-menu,
+.cid-sQemNfxrBN .navbar.opened {
+  background: #ffffff !important;
+}
+.cid-sQemNfxrBN .nav-item:focus,
+.cid-sQemNfxrBN .nav-link:focus {
+  outline: none;
+}
+.cid-sQemNfxrBN .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-sQemNfxrBN .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-sQemNfxrBN .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-sQemNfxrBN .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-sQemNfxrBN .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-sQemNfxrBN .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-sQemNfxrBN .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #ffffff;
+}
+.cid-sQemNfxrBN .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-sQemNfxrBN .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-sQemNfxrBN .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-sQemNfxrBN .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-sQemNfxrBN .navbar.collapsed {
+  justify-content: center;
+}
+.cid-sQemNfxrBN .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-sQemNfxrBN .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-sQemNfxrBN .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 5.3rem);
+  }
+}
+.cid-sQemNfxrBN .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-sQemNfxrBN .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-sQemNfxrBN .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-sQemNfxrBN .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-sQemNfxrBN .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-sQemNfxrBN .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-sQemNfxrBN .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-sQemNfxrBN .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-sQemNfxrBN .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-sQemNfxrBN .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-sQemNfxrBN .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-sQemNfxrBN .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-sQemNfxrBN .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-sQemNfxrBN .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-sQemNfxrBN .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-sQemNfxrBN .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-sQemNfxrBN .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-sQemNfxrBN .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-sQemNfxrBN .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-sQemNfxrBN .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-sQemNfxrBN .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-sQemNfxrBN .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-sQemNfxrBN .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-sQemNfxrBN .dropdown-item.active,
+.cid-sQemNfxrBN .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-sQemNfxrBN .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-sQemNfxrBN .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-sQemNfxrBN .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-sQemNfxrBN .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #ffffff;
+}
+.cid-sQemNfxrBN .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-sQemNfxrBN .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-sQemNfxrBN ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-sQemNfxrBN .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-sQemNfxrBN button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-sQemNfxrBN button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #000000;
+}
+.cid-sQemNfxrBN button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-sQemNfxrBN button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-sQemNfxrBN button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-sQemNfxrBN button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-sQemNfxrBN nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-sQemNfxrBN nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-sQemNfxrBN nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-sQemNfxrBN nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-sQemNfxrBN .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-sQemNfxrBN a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-sQemNfxrBN .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-sQemNfxrBN .navbar {
+    height: 70px;
+  }
+  .cid-sQemNfxrBN .navbar.opened {
+    height: auto;
+  }
+  .cid-sQemNfxrBN .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-sQemNfQhbk {
+  padding-top: 4rem;
+  padding-bottom: 0rem;
+  background-color: #22a5e5;
+}
+.cid-sQemNfQhbk .mbr-section-title {
+  color: #ffffff;
+}
+.cid-sQemNfQhbk .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-sQemNgg2DZ {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-sQemNgg2DZ .card .card-header {
+  background-color: transparent;
+  margin-bottom: 0;
+}
+.cid-sQemNgg2DZ .panel-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cid-sQemNgg2DZ .mbr-iconfont {
+  padding-left: 1rem;
+  font-family: 'Moririse2' !important;
+  font-size: 1.4rem !important;
+  color: #22a5e5;
+}
+.cid-sQemNgg2DZ .panel-body,
+.cid-sQemNgg2DZ .card-header {
+  padding: 1rem 0;
+}
+.cid-sQemNgg2DZ .panel-title-edit {
+  color: #fa5454;
+}
+.cid-sQemNgyzWP {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-sQemNgyzWP .card .card-header {
+  background-color: transparent;
+  margin-bottom: 0;
+}
+.cid-sQemNgyzWP .panel-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cid-sQemNgyzWP .mbr-iconfont {
+  padding-left: 1rem;
+  font-family: 'Moririse2' !important;
+  font-size: 1.4rem !important;
+  color: #22a5e5;
+}
+.cid-sQemNgyzWP .panel-body,
+.cid-sQemNgyzWP .card-header {
+  padding: 1rem 0;
+}
+.cid-sQemNgyzWP .panel-title-edit {
+  color: #fa5454;
+}
+.cid-sQemNgQOrI {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-sQemNgQOrI .card .card-header {
+  background-color: transparent;
+  margin-bottom: 0;
+}
+.cid-sQemNgQOrI .panel-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cid-sQemNgQOrI .mbr-iconfont {
+  padding-left: 1rem;
+  font-family: 'Moririse2' !important;
+  font-size: 1.4rem !important;
+  color: #22a5e5;
+}
+.cid-sQemNgQOrI .panel-body,
+.cid-sQemNgQOrI .card-header {
+  padding: 1rem 0;
+}
+.cid-sQemNgQOrI .panel-title-edit {
+  color: #fa5454;
+}
+.cid-sQemNh86tz {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-sQemNh86tz .card .card-header {
+  background-color: transparent;
+  margin-bottom: 0;
+}
+.cid-sQemNh86tz .panel-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cid-sQemNh86tz .mbr-iconfont {
+  padding-left: 1rem;
+  font-family: 'Moririse2' !important;
+  font-size: 1.4rem !important;
+  color: #22a5e5;
+}
+.cid-sQemNh86tz .panel-body,
+.cid-sQemNh86tz .card-header {
+  padding: 1rem 0;
+}
+.cid-sQemNh86tz .panel-title-edit {
+  color: #fa5454;
+}
+.cid-sQemNhJiQK {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-sQemNhJiQK .media-container-row .mbr-text {
   color: #000000;
 }
