--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1119,6 +1119,31 @@ a {
 .cid-sBP1pFuI5C .row {
   justify-content: center;
 }
+.cid-t0TJUzHDk1 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-t0TI0u5T0N {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-t0TI0u5T0N blockquote {
+  border-color: #22a5e5;
+  border-radius: 4px;
+  background-color: #fafafa;
+}
+.cid-t0TFPwwU8j {
+  padding-top: 3rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-t0TFPwwU8j blockquote {
+  border-color: #22a5e5;
+  border-radius: 4px;
+  background-color: #fafafa;
+}
 .cid-sOm5IZeeMk {
   padding-top: 8rem;
   padding-bottom: 6rem;
