--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1062,7 +1062,7 @@ a {
 .cid-sglyaWFR7C {
   padding-top: 10rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/bg1-3.png");
+  background-color: #ffffff;
 }
 .cid-sglyaWFR7C .row {
   flex-direction: row-reverse;
