--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -777,7 +777,7 @@ a {
 }
 .cid-sgd85kzKWm .dropdown-menu,
 .cid-sgd85kzKWm .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-sgd85kzKWm .nav-item:focus,
 .cid-sgd85kzKWm .nav-link:focus {
@@ -812,7 +812,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgd85kzKWm .navbar.opened {
   transition: all 0.3s;
@@ -957,7 +957,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgd85kzKWm .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgd85kzKWm .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -1082,6 +1082,7 @@ a {
 }
 .cid-sglyaWFR7C .mbr-section-title {
   text-align: left;
+  color: #232323;
 }
 .cid-sglyaWFR7C .mbr-text,
 .cid-sglyaWFR7C .mbr-section-btn {
@@ -1123,6 +1124,9 @@ a {
   padding-top: 6rem;
   padding-bottom: 6rem;
   background-color: #ffffff;
+}
+.cid-t0TJUzHDk1 .mbr-section-title {
+  color: #fa5454;
 }
 .cid-sOm5IZeeMk {
   padding-top: 8rem;
@@ -1194,7 +1198,7 @@ a {
   background-color: #ffffff;
 }
 .cid-sglzttM5SV .mbr-section-title {
-  color: #353535;
+  color: #f62cf4;
 }
 .cid-sglB8hb5ax {
   padding-top: 2rem;
@@ -1223,7 +1227,7 @@ a {
   background-color: #ffffff;
 }
 .cid-sph537FbpO .mbr-section-title {
-  color: #353535;
+  color: #a5db11;
 }
 .cid-sph55sua53 {
   padding-top: 2rem;
@@ -1324,7 +1328,7 @@ a {
 }
 .cid-sgjav9Ubi2 .dropdown-menu,
 .cid-sgjav9Ubi2 .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-sgjav9Ubi2 .nav-item:focus,
 .cid-sgjav9Ubi2 .nav-link:focus {
@@ -1359,7 +1363,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgjav9Ubi2 .navbar.opened {
   transition: all 0.3s;
@@ -1504,7 +1508,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgjav9Ubi2 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgjav9Ubi2 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -3030,7 +3034,7 @@ a {
 }
 .cid-sgjcyY2svw .dropdown-menu,
 .cid-sgjcyY2svw .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-sgjcyY2svw .nav-item:focus,
 .cid-sgjcyY2svw .nav-link:focus {
@@ -3065,7 +3069,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgjcyY2svw .navbar.opened {
   transition: all 0.3s;
@@ -3210,7 +3214,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgjcyY2svw .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgjcyY2svw .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -3487,7 +3491,7 @@ a {
 }
 .cid-sgjgzlqtFW .dropdown-menu,
 .cid-sgjgzlqtFW .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-sgjgzlqtFW .nav-item:focus,
 .cid-sgjgzlqtFW .nav-link:focus {
@@ -3522,7 +3526,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgjgzlqtFW .navbar.opened {
   transition: all 0.3s;
@@ -3667,7 +3671,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgjgzlqtFW .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgjgzlqtFW .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -3944,7 +3948,7 @@ a {
 }
 .cid-sgjiVI0nw7 .dropdown-menu,
 .cid-sgjiVI0nw7 .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-sgjiVI0nw7 .nav-item:focus,
 .cid-sgjiVI0nw7 .nav-link:focus {
@@ -3979,7 +3983,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgjiVI0nw7 .navbar.opened {
   transition: all 0.3s;
@@ -4124,7 +4128,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgjiVI0nw7 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgjiVI0nw7 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -4417,27 +4421,6 @@ a {
 .cid-sgjiVKTmAL .media-container-row .mbr-text {
   color: #000000;
 }
-.cid-sgk40MdGSP {
-  padding-top: 6rem;
-  padding-bottom: 2rem;
-  background-color: #22a5e5;
-}
-.cid-sgk40MdGSP .mbr-section-title {
-  color: #ffffff;
-}
-.cid-sgk40MdGSP .mbr-section-subtitle {
-  color: #ffffff;
-}
-.cid-sglxhwtvO2 {
-  padding-top: 4rem;
-  padding-bottom: 3rem;
-  background-color: #ffffff;
-}
-.cid-sglxhwtvO2 blockquote {
-  border-color: #22a5e5;
-  border-radius: 4px;
-  background-color: #fafafa;
-}
 .cid-sgk40LCT9w {
   z-index: 1000;
   width: 100%;
@@ -4508,7 +4491,7 @@ a {
 }
 .cid-sgk40LCT9w .dropdown-menu,
 .cid-sgk40LCT9w .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-sgk40LCT9w .nav-item:focus,
 .cid-sgk40LCT9w .nav-link:focus {
@@ -4543,7 +4526,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgk40LCT9w .navbar.opened {
   transition: all 0.3s;
@@ -4688,7 +4671,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgk40LCT9w .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgk40LCT9w .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -4790,6 +4773,27 @@ a {
     left: -1rem;
   }
 }
+.cid-sgk40MdGSP {
+  padding-top: 6rem;
+  padding-bottom: 2rem;
+  background-color: #22a5e5;
+}
+.cid-sgk40MdGSP .mbr-section-title {
+  color: #ffffff;
+}
+.cid-sgk40MdGSP .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-sglxhwtvO2 {
+  padding-top: 4rem;
+  padding-bottom: 3rem;
+  background-color: #ffffff;
+}
+.cid-sglxhwtvO2 blockquote {
+  border-color: #22a5e5;
+  border-radius: 4px;
+  background-color: #fafafa;
+}
 .cid-sglwDipn7X {
   padding-top: 5rem;
   padding-bottom: 4rem;
@@ -4878,7 +4882,7 @@ a {
 }
 .cid-sluDRyDEs9 .dropdown-menu,
 .cid-sluDRyDEs9 .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-sluDRyDEs9 .nav-item:focus,
 .cid-sluDRyDEs9 .nav-link:focus {
@@ -4913,7 +4917,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sluDRyDEs9 .navbar.opened {
   transition: all 0.3s;
@@ -5058,7 +5062,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sluDRyDEs9 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sluDRyDEs9 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -5729,7 +5733,7 @@ a {
 }
 .cid-sluDW1RrDn .dropdown-menu,
 .cid-sluDW1RrDn .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-sluDW1RrDn .nav-item:focus,
 .cid-sluDW1RrDn .nav-link:focus {
@@ -5764,7 +5768,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sluDW1RrDn .navbar.opened {
   transition: all 0.3s;
@@ -5909,7 +5913,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sluDW1RrDn .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sluDW1RrDn .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -7260,7 +7264,7 @@ a {
 }
 .cid-sgjbW0mnHG .dropdown-menu,
 .cid-sgjbW0mnHG .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-sgjbW0mnHG .nav-item:focus,
 .cid-sgjbW0mnHG .nav-link:focus {
@@ -7295,7 +7299,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgjbW0mnHG .navbar.opened {
   transition: all 0.3s;
@@ -7440,7 +7444,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgjbW0mnHG .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgjbW0mnHG .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -7941,7 +7945,7 @@ a {
 }
 .cid-sgktSz438E .dropdown-menu,
 .cid-sgktSz438E .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-sgktSz438E .nav-item:focus,
 .cid-sgktSz438E .nav-link:focus {
@@ -7976,7 +7980,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgktSz438E .navbar.opened {
   transition: all 0.3s;
@@ -8121,7 +8125,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgktSz438E .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sgktSz438E .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -8564,7 +8568,7 @@ a {
 }
 .cid-slZPZHeYeI .dropdown-menu,
 .cid-slZPZHeYeI .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-slZPZHeYeI .nav-item:focus,
 .cid-slZPZHeYeI .nav-link:focus {
@@ -8599,7 +8603,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-slZPZHeYeI .navbar.opened {
   transition: all 0.3s;
@@ -8744,7 +8748,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-slZPZHeYeI .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-slZPZHeYeI .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -8945,7 +8949,7 @@ a {
 }
 .cid-sQemNfxrBN .dropdown-menu,
 .cid-sQemNfxrBN .navbar.opened {
-  background: #ffffff !important;
+  background: #22a5e5 !important;
 }
 .cid-sQemNfxrBN .nav-item:focus,
 .cid-sQemNfxrBN .nav-link:focus {
@@ -8980,7 +8984,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sQemNfxrBN .navbar.opened {
   transition: all 0.3s;
@@ -9125,7 +9129,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sQemNfxrBN .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #22a5e5;
 }
 .cid-sQemNfxrBN .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
